--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=IANBERNARDO\\SQLEXPRESS;Database=Tarefa;Trusted_Connection=True;"
   }
 }
